--- a/latex/appendix_pol_complex_xtable.tex
+++ b/latex/appendix_pol_complex_xtable.tex
@@ -1,11 +1,11 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 00:21:29 2023
+% Thu Aug 24 00:32:12 2023
 \begin{longtable}{p{3cm}p{3cm}p{2cm}p{2cm}p{4cm}}
   \toprule
 Island group (overnight-sailing) & Island group (shared language) & Political complexity (EA033) & glottocodes & References \\ 
   \midrule
 Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{sahlins1958social}, \citet{buck1952}, \citet{buck1952}, \citet{kirch1984evolution}, \citet{kirch1984evolution}, \citet{van1995maori}, \citet{van1995maori} \\ 
-  Banaba & Tungaru and Tuvalu & 2 & gilb1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas} \\ 
+  Banaba & Tungaru + Tuvalu & 2 & gilb1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas} \\ 
   Bellona + Rennelle & Mo-ava-mo-iki & 2 & renn1242 & \citet{birketsmith1956}, \citet{birketsmith1956}, \citet{monberg1991bellona}, \citet{monberg1991bellona} \\ 
   Chuuk & Chuuk & 2 & chuu1238 & \citet{goodenough1991}, \citet{goodenough2002under}, \citet{mahony1960taro} \\ 
   East Futuna & East Futuna & 2 & east2447 & \citet{kirch1994wet} \\ 
@@ -30,7 +30,7 @@ Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{sahlins19
   Napuka & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
   Ngatik & Pohnpei & 3 & pohn1238 & \citet{hanlon2019upon}, \citet{haun1984prehistoric}, \citet{raynor1991indigenous}, \citet{riesenberg1968native} \\ 
   Ngā Pū Toru & Avaiki Nui (south) & 2 & raro1241 & \citet{bellwood1971varieties}, \citet{buck1934}, \citet{crocombe_1967}, \citet{hayes1981cook}, \citet{walter1996} \\ 
-  Niu + Tuvalu & Tungaru and Tuvalu & 2 & gilb1244, tuva1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas}, \citet{macdonald1982cinderellas}, \citet{goldsmith1991} \\ 
+  Niu + Tuvalu & Tungaru + Tuvalu & 2 & gilb1244, tuva1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas}, \citet{macdonald1982cinderellas}, \citet{goldsmith1991} \\ 
   Niue & Niue & 2 & niue1239 & \citet{loeb1978}, \citet{smith1983niue}, \citet{walter_anderson1995} \\ 
   Nukuoro & Nukuoro & 1 & nuku1260 & \citet{carroll1966nukuoro}, \citet{carroll1975pacific}, \citet{eilers_1934} \\ 
   Nukutaveke 59 & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
@@ -54,11 +54,11 @@ Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{sahlins19
   Tokelau & Tokelau & 2 & toke1240 & \citet{hooper1973demographic}, \citet{macgregor1937} \\ 
   Tonga & Tonga & 3 & tong1325 & \citet{kirch1984evolution}, \citet{cummins1977tongan}, \citet{ferdon1988early} \\ 
   Tuamotu + Puka-puka & Tuamotu & 2 & tuam1242 & \citet{emory1975material}, \citet{emory1975material} \\ 
-  Tungaru & Tungaru and Tuvalu & 2 & gilb1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas} \\ 
+  Tungaru & Tungaru + Tuvalu & 2 & gilb1244 & \citet{lambert1966}, \citet{lambert1975makin}, \citet{lambert1991}, \citet{macdonald1982cinderellas} \\ 
   Tupuai & Tupuai & 2 & tubu1240 & \citet{aitken1930ethnology}, \citet{bollt2008excavations}, \citet{edwards2003archaeological} \\ 
   Tureia & Tuamotu & 2 & tuam1242 & \citet{emory1975material} \\ 
-  Tuvalu 31 & Tungaru and Tuvalu & 2 & tuva1244 & \citet{macdonald1982cinderellas}, \citet{goldsmith1991} \\ 
-  Tuvalu 32 & Tungaru and Tuvalu & 2 & tuva1244 & \citet{macdonald1982cinderellas}, \citet{goldsmith1991} \\ 
+  Tuvalu 31 & Tungaru + Tuvalu & 2 & tuva1244 & \citet{macdonald1982cinderellas}, \citet{goldsmith1991} \\ 
+  Tuvalu 32 & Tungaru + Tuvalu & 2 & tuva1244 & \citet{macdonald1982cinderellas}, \citet{goldsmith1991} \\ 
   Ulithi + Yap & Ulithi (greater) & 2 & ulit1238 & \citet{lessa1950}, \citet{lessa1966} \\ 
   Ulithi + Yap & Yap & 3 & yape1248 & \citet{huntetal1949}, \citet{muller1917}, \citet{murdocketal1944b}, \citet{salesius1906}, \citet{schneider1953}, \citet{schneider1957_yap}, \citet{schneider1962}, \citet{tetens_savages}, \citet{tetensandkubary1873} \\ 
   Uvea (Wallis) & Uvea (Wallis) & 2 & wall1257 & \citet{burrows1937}, \citet{pollock1995power} \\ 
@@ -67,10 +67,10 @@ Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{sahlins19
   Vanuatu and Temotu & Aneityum & 2 & anei1239 & \citet{humphreys1926}, \citet{spriggs1982taro}, \citet{spriggs1986landscape} \\ 
   Vanuatu and Temotu & Anuta & 1 & anut1237 & \citet{feinberg1988socio}, \citet{feinberg1991}, \citet{kirch2002te} \\ 
   Vanuatu and Temotu & Aore & 1 & aore1237 & \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Duff and Reef Islands & 1 & ayiw1239 & \citet{davenport1969} \\ 
+  Vanuatu and Temotu & Duff + Reef Islands & 1 & ayiw1239 & \citet{davenport1969} \\ 
   Vanuatu and Temotu & Efate & 2 & nort2836 & \citet{facey1981hereditary}, \citet{facey1981hereditary}, \citet{facey1981hereditary} \\ 
   Vanuatu and Temotu & Erromango & 2 & siee1239 & \citet{humphreys1926}, \citet{spriggs1989archaeological} \\ 
-  Vanuatu and Temotu & Futuna and Aniwa & 2 & futu1245 & \citet{capell1958culture} \\ 
+  Vanuatu and Temotu & Futuna + Aniwa & 2 & futu1245 & \citet{capell1958culture} \\ 
   Vanuatu and Temotu & Hiu & 1 & hiww1237 & \citet{bonnemaison1996power} \\ 
   Vanuatu and Temotu & Loh-Toga & 1 & loto1240 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
   Vanuatu and Temotu & Maewo & 1 & baet1237, cent2058, mari1426 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
