--- a/latex/appendix_pol_complex_xtable.tex
+++ b/latex/appendix_pol_complex_xtable.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 00:35:23 2023
+% Thu Aug 24 00:41:26 2023
 \begin{longtable}{p{3cm}p{3cm}p{2cm}p{2cm}p{4cm}}
   \toprule
 Island group (overnight-sailing) & Island group (shared language) & Political complexity (EA033) & glottocodes & References \\ 
@@ -62,28 +62,28 @@ Aotearoa & Aotearoa & 2 & maor1246 & \citet{sahlins1958social}, \citet{sahlins19
   Ulithi + Yap & Ulithi (greater) & 2 & ulit1238 & \citet{lessa1950}, \citet{lessa1966} \\ 
   Ulithi + Yap & Yap & 3 & yape1248 & \citet{huntetal1949}, \citet{muller1917}, \citet{murdocketal1944b}, \citet{salesius1906}, \citet{schneider1953}, \citet{schneider1957_yap}, \citet{schneider1962}, \citet{tetens_savages}, \citet{tetensandkubary1873} \\ 
   Uvea (Wallis) & Uvea (Wallis) & 2 & wall1257 & \citet{burrows1937}, \citet{pollock1995power} \\ 
-  Vanuatu and Temotu & Ambae & 1 & east2443, west2513 & \citet{bonnemaison1972systeme}, \citet{bonnemaison1972systeme} \\ 
-  Vanuatu and Temotu & Ambrym & 1 & sout2859 & \citet{tonkinson1981church} \\ 
-  Vanuatu and Temotu & Aneityum & 2 & anei1239 & \citet{humphreys1926}, \citet{spriggs1982taro}, \citet{spriggs1986landscape} \\ 
-  Vanuatu and Temotu & Anuta & 1 & anut1237 & \citet{feinberg1988socio}, \citet{feinberg1991}, \citet{kirch2002te} \\ 
-  Vanuatu and Temotu & Aore & 1 & aore1237 & \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Duff + Reef Islands & 1 & ayiw1239 & \citet{davenport1969} \\ 
-  Vanuatu and Temotu & Efate & 2 & nort2836 & \citet{facey1981hereditary}, \citet{facey1981hereditary}, \citet{facey1981hereditary} \\ 
-  Vanuatu and Temotu & Erromango & 2 & siee1239 & \citet{humphreys1926}, \citet{spriggs1989archaeological} \\ 
-  Vanuatu and Temotu & Futuna + Aniwa & 2 & futu1245 & \citet{capell1958culture} \\ 
-  Vanuatu and Temotu & Hiu & 1 & hiww1237 & \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Loh-Toga & 1 & loto1240 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Maewo & 1 & baet1237, cent2058, mari1426 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Malakula & 1 & aulu1238, avok1244, axam1237, bign1238, burm1263, bwen1239, dixo1238, katb1237, labo1244, lare1249, lete1241, ling1265, litz1237, maee1241, malf1237, malu1245, mara1399, mask1242, mpot1241, nese1235, nisv1234, niti1249, port1285, rere1240, unua1237, urip1239, vinm1237, vivt1234, sout2857 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{deacon1934} \\ 
-  Vanuatu and Temotu & Mota & 1 & mota1237 & \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Mota Lava & 1 & motl1237 & \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Paama & 1 & paam1238 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Pentecost & 1 & saaa1241 & \citet{lane1956} \\ 
-  Vanuatu and Temotu & Santo & 1 & butm1237, polo1242, akei1237, ambl1237, fort1240, lore1244, mere1242, moro1286, noku1237, piam1242, rori1237, saka1289, shar1244, tamb1253, tasm1246, tial1239, tolo1255, valp1237, wail1242, wusi1237, tang1347 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Tanna & 1 & sout2869 & \citet{lindstroem1991} \\ 
-  Vanuatu and Temotu & Tikopia & 2 & tiko1237 & \citet{kirch1994wet}, \citet{sahlins1958social}, \citet{firth1939primitive}, \citet{firth1959social}, \citet{firth1991} \\ 
-  Vanuatu and Temotu & Ureparapara & 1 & leha1243, leha1244 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
-  Vanuatu and Temotu & Vanua Lava & 1 & leme1238, vera1241, vure1239 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Ambae & 1 & east2443, west2513 & \citet{bonnemaison1972systeme}, \citet{bonnemaison1972systeme} \\ 
+  Vanuatu + Temotu & Ambrym & 1 & sout2859 & \citet{tonkinson1981church} \\ 
+  Vanuatu + Temotu & Aneityum & 2 & anei1239 & \citet{humphreys1926}, \citet{spriggs1982taro}, \citet{spriggs1986landscape} \\ 
+  Vanuatu + Temotu & Anuta & 1 & anut1237 & \citet{feinberg1988socio}, \citet{feinberg1991}, \citet{kirch2002te} \\ 
+  Vanuatu + Temotu & Aore & 1 & aore1237 & \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Duff + Reef Islands & 1 & ayiw1239 & \citet{davenport1969} \\ 
+  Vanuatu + Temotu & Efate & 2 & nort2836 & \citet{facey1981hereditary}, \citet{facey1981hereditary}, \citet{facey1981hereditary} \\ 
+  Vanuatu + Temotu & Erromango & 2 & siee1239 & \citet{humphreys1926}, \citet{spriggs1989archaeological} \\ 
+  Vanuatu + Temotu & Futuna + Aniwa & 2 & futu1245 & \citet{capell1958culture} \\ 
+  Vanuatu + Temotu & Hiu & 1 & hiww1237 & \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Loh-Toga & 1 & loto1240 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Maewo & 1 & baet1237, cent2058, mari1426 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Malakula & 1 & aulu1238, avok1244, axam1237, bign1238, burm1263, bwen1239, dixo1238, katb1237, labo1244, lare1249, lete1241, ling1265, litz1237, maee1241, malf1237, malu1245, mara1399, mask1242, mpot1241, nese1235, nisv1234, niti1249, port1285, rere1240, unua1237, urip1239, vinm1237, vivt1234, sout2857 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{deacon1934} \\ 
+  Vanuatu + Temotu & Mota & 1 & mota1237 & \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Mota Lava & 1 & motl1237 & \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Paama & 1 & paam1238 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Pentecost & 1 & saaa1241 & \citet{lane1956} \\ 
+  Vanuatu + Temotu & Santo & 1 & butm1237, polo1242, akei1237, ambl1237, fort1240, lore1244, mere1242, moro1286, noku1237, piam1242, rori1237, saka1289, shar1244, tamb1253, tasm1246, tial1239, tolo1255, valp1237, wail1242, wusi1237, tang1347 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Tanna & 1 & sout2869 & \citet{lindstroem1991} \\ 
+  Vanuatu + Temotu & Tikopia & 2 & tiko1237 & \citet{kirch1994wet}, \citet{sahlins1958social}, \citet{firth1939primitive}, \citet{firth1959social}, \citet{firth1991} \\ 
+  Vanuatu + Temotu & Ureparapara & 1 & leha1243, leha1244 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
+  Vanuatu + Temotu & Vanua Lava & 1 & leme1238, vera1241, vure1239 & \citet{bonnemaison1996power}, \citet{bonnemaison1996power}, \citet{bonnemaison1996power} \\ 
   Woleai & Woleai & 2 & wole1240 & \citet{alkire1991woleai}, \citet{alkire1991woleai}, \citet{burrowsandspiro1953}, \citet{burrowsandspiro1953} \\ 
   Ānewetak & Ratak + Rālik & 3 & mars1254 & \citet{carruci1991marshall}, \citet{erdland1914}, \citet{williamson_1982} \\ 
    \bottomrule
