--- a/latex/main.tex
+++ b/latex/main.tex
@@ -889,6 +889,15 @@ There is a negative correlation of -0.56 between the population (log10) per coun
 \singlespacing
 \label{dates_table_appendic}
 
+\FloatBarrier
+\newpage
+\subsection{Table of political complexity per island group }
+\singlespacing
+\label{appendix_pol_complex}
+
+\input{appendix_medium_group_table.tex}
+
+
 
 
 
