--- a/latex/appendix_medium_group_table.tex
+++ b/latex/appendix_medium_group_table.tex
@@ -1,8 +1,8 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 00:52:49 2023
+% Thu Aug 24 00:55:38 2023
 \begin{longtable}{p{4.5cm}p{2cm}p{2cm}p{2cm}p{2cm}p{4cm}p{4cm}}
   \toprule
-Island group (shared language) & Shoreline & environ_PC1 & environ_PC2 & environ_PC3 & Political complexity (EA033) & Time depth \\ 
+Island group (shared language) & Shoreline & environ PC1 & environ PC2 & environ PC3 & Political complexity (EA033) & Time depth \\ 
   \midrule
 Malakula & 1.010 & -0.612 & -0.837 & -0.662 & -1.110 & 0.864 \\ 
   Kanaky (New Caledonia main island) & 2.275 & -1.420 & -0.254 & -1.210 & -1.110 & 0.864 \\ 
