--- a/latex/appendix_SBZR_group_table.tex
+++ b/latex/appendix_SBZR_group_table.tex
@@ -1,8 +1,8 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 00:52:49 2023
+% Thu Aug 24 00:55:38 2023
 \begin{longtable}{p{4.5cm}p{2cm}p{2cm}p{2cm}p{4cm}p{4cm}}
   \toprule
-Island group (overnight-sailing) & Shoreline & environ_PC1 & environ_PC2 & Political complexity (EA033) & Time depth \\ 
+Island group (overnight-sailing) & Shoreline & environ PC1 & environ PC2 & Political complexity (EA033) & Time depth \\ 
   \midrule
 Vanuatu + Temotu & 1.293 & -0.338 & 0.998 & -1.860 & 1.753 \\ 
   New Caledonia (incl loyalties) & 2.129 & -1.347 & 1.067 & 1.447 & 1.753 \\ 
