Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -891,12 +891,13 @@ There is a negative correlation of -0.56 between the population (log10) per coun
 
 \FloatBarrier
 \newpage
-\subsection{Table of political complexity per island group }
+\subsection{Input data tables}
 \singlespacing
-\label{appendix_pol_complex}
+\label{appendix_data tables}
 
 \input{appendix_medium_group_table.tex}
 
+\input{latex/appendix_SBZR_group_table}
 
 
 
