--- a/latex/pol_complex_refs.bib
+++ b/latex/pol_complex_refs.bib
@@ -19,11 +19,12 @@
 
 @incollection{alkire1991woleai,
   title={Woleai},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Alkire, WH},
+    editor={Terence E. Hays},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Alkire, William H.},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={382--384},
   year={1991}
 }
@@ -475,133 +476,140 @@ publisher={University of Hawai'i Press},
 
 @incollection{carruci1991marshall,
   title={Marshall Islands},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Carucci, LM},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Carucci, Laurence M.},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={191-194},
   year={1991}
 }
 
 @incollection{young1991goodenough,
-  title={Goodenough Island},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Young, MW},
+  title={Dobu; Goodenough Island},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Young, Michael},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={85-88},
   year={1991}
 }
 
 @incollection{donner1991,
   title={Ontong Java},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Donner, WW},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Donner, William W.},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={253-255},
   year={1991}
 }
 
 @incollection{feinberg1991,
   title={Anuta},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Feinberg, R},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Feinberg, Richard},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
   pages={13-16},
   year={1991}
 }
 
 @incollection{firth1991,
   title={Tikopia},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Firth, R},
+    editor={Terence E. Hays},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Firth, Raymond},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
   pages={324-327},
   year={1991}
 }
 
 @incollection{goldsmith1991,
   title={Tuvalu},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Goldsmith, M},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Goldsmith, Michael},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
   pages={354-357},
   year={1991}
 }
 
 @incollection{goodenough1991,
   title={Truk},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Goodenough, WH},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Goodenough, Ward H.},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},  
   pages={351-354},
   year={1991}
 }
 
 @incollection{peoples1991,
   title={Kosrae},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Peoples, JG},
+    editor={Terence E. Hays},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Peoples, James G.},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
   pages={128-131},
   year={1991}
 }
 
 @incollection{howard1991,
   title={Rotuma},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Graves, MW},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Alan Howard},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={280-283},
   year={1991}
 }
 
 @incollection{lambert1991,
   title={Kiribati},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Lambert, B},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  editor={Terence E. Hays},
+  author={Lambert, Bernd},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={120-124},
   year={1991}
 }
 
 @incollection{lindstroem1991,
   title={Tanna},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Lamont Lindström},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+    editor={Terence E. Hays},
+  author={Lamont Lindstrom},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={314},
   year={1991}
 }
 
 
 @incollection{winslow1991,
-  title={Ajie},
-  booktitle={Encyclopaedia of World Cultures},
-  author={Don Winslow},
+  title={Ajië},
+  booktitle={Encyclopedia of World Cultures: II Oceania},
+  author={Donna Winslow},
+    editor={Terence E. Hays},
   publisher={G.K. Hall and co},
-  address={New York},
-  volume={2: Oceania},
+  address={Boston, Massachusetts},
+
   pages={9},
   year={1991}
 }
