Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -686,7 +686,7 @@ In some instances, it may be that ``local community'' and ``society'' are one an
   
 Political complexity (EA033) as a variable is observed per society, i.e. it does \emph{not} capture relationships \emph{between} distinct societies. It also does not track the political structure \emph{within} the local community\footnote{Ethnographic Atlas variable 32 captures jurisdictional hierarchies \emph{within} local communities.} or \emph{horizontal} political relationships within a society (e.g. political relationships between equal genealogical groups). It specifically measures \emph{vertical} jurisdictional levels \emph{within} a given society, \emph{beyond} the local community. Furthermore, it targets ``jurisdictional'' authority --- not just the existence of rank. In other words, the levels of authority need to be tied to some kind of jurisdictional power, most likely the power to exert punishment for transgressions and the possibility to declare war upon other societies. 
 
-Specifically, it is necessary to underline that despite the common name for this variable in the Ethnographic Atlas --- ``Political complexity'' --- it does not include politically complex systems such as the Kula exchange ring\citet{damon2002kula}, see Fig \ref{kula_ring}. Exchange systems of trade/debt are definitely complex and political, but they are not included in EA033 as they do not track \emph{vertical} complexity.
+Specifically, it is necessary to underline that despite the common name for this variable in the Ethnographic Atlas --- ``Political complexity'' --- it does not include politically complex systems such as the Kula exchange ring\citet{damon2002kula}, see Fig \ref{kula_ring}. Exchange systems of trade/debt are definitely complex and political, but they are not included in EA033 as they do not track \emph{vertical} complexity but rather horizontal.
 
 \begin{figure}[ht]
 \centering
@@ -694,6 +694,8 @@ Specifically, it is necessary to underline that despite the common name for this
 \caption{Kula exchange ring, from \citet{damon2002kula}.}
 \label{kula_ring}
 \end{figure}
+
+Complex socio-political horizontal networks can also be found in Vanuatu, for example on the island of Tanna. \citet[314]{lindstroem1991} even remarks on the relationship with cultural diversity, writing: ``Kava-drinking grounds across the island are linked by a complex system of "roads" along which men exchange messages, goods, and spouses. This road network, by which each Tannese village is linked to all others, has produced cultural homogeneity across the island, despite linguistic diversity.''
 
 
 The possible values societies can take for this variable of political complexity are:
@@ -888,6 +890,13 @@ There is a negative correlation of -0.56 between the population (log10) per coun
 \subsection{Table of settlement date per island group based on archaeology}
 \singlespacing
 \label{dates_table_appendic}
+
+In the table of \citet{rieth_cochrane_2018},  Santa Cruz and Reef islands are mentioned specifically, so we take “Vanuatu” to mean all islands in Vanuatu minus those.
+Re outliers
+
+Renelle belleona dates are Older date for pre-polynesian settlement horizon \citet{carson2012recent}. For Taumako, Carson describes initial Lapita settlement 3,000 years ago and Polynesian outlier settlmenent 1000 years ago.
+
+For Nukuoro, Carson notes that there is evidence of earlier, possibly short-term, settlement.
 
 \FloatBarrier
 \newpage
