Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -890,9 +890,9 @@ There is a negative correlation of -0.56 between the population (log10) per coun
 \subsection{Table of settlement date per island group based on archaeology}
 \singlespacing
 \label{dates_table_appendic}
-\begin{landscape}
+%\begin{landscape}
 \input{appendix_dates_xtable.tex}
-\end{landscape}
+%\end{landscape}
 
 In the table of \citet{rieth_cochrane_2018},  Santa Cruz and Reef islands are mentioned specifically, so we take “Vanuatu” to mean all islands in Vanuatu minus those.
 Re outliers
