--- a/latex/appendix_medium_group_table.tex
+++ b/latex/appendix_medium_group_table.tex
@@ -1,73 +1,73 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 21:04:01 2023
-\begin{longtable}{p{4.5cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}}
+% Thu Aug 24 21:33:07 2023
+\begin{longtable}{p{4.5cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}}
   \toprule
-Island group (shared language) & Shoreline & environ PC1 & environ PC2 & environ PC3 & Political complexity (EA033) & Time depth \\ 
+Island group (shared language) & lg_count & Shoreline & environ PC1 & environ PC2 & environ PC3 & Political complexity (EA033) & Time depth \\ 
   \midrule
-Malakula & 1.010 & -0.612 & -0.837 & -0.662 & -1.110 & 0.864 \\ 
-  Kanaky (New Caledonia main island) & 2.275 & -1.420 & -0.254 & -1.210 & -1.110 & 0.864 \\ 
-  Santo & 1.038 & -0.340 & -0.854 & -0.348 & -1.110 & 0.864 \\ 
-  Ambrym & -0.706 & 0.372 & 1.624 & -2.085 & -1.110 & 0.864 \\ 
-  Efate & 0.559 & -0.675 & -0.429 & -1.083 & 0.182 & 0.864 \\ 
-  Pentecost & -0.173 & -0.219 & -0.356 & -0.601 & -1.110 & 0.864 \\ 
-  Tanna & -0.308 & -1.063 & -0.592 & -0.951 & -1.110 & 0.864 \\ 
-  Viti Levu + Yasawa & 1.238 & -0.597 & -0.573 & -0.338 & 1.474 & 0.864 \\ 
-  Erromango & -0.141 & -0.775 & -0.101 & -1.303 & 0.182 & 0.864 \\ 
-  Laguas yan gåni & 0.703 & -0.303 & -1.148 & -1.141 & -1.110 & 1.146 \\ 
-  Maewo & -0.194 & -0.124 & -0.384 & -0.448 & -1.110 & 0.864 \\ 
-  Vanua Lava & -0.272 & 0.160 & -0.440 & 0.067 & -1.110 & 0.864 \\ 
-  Ambae & -0.804 & 0.556 & 1.559 & -1.812 & -1.110 & 0.864 \\ 
-  Duff + Reef Islands & -0.636 & 0.905 & -0.534 & 1.536 & -1.110 & 0.864 \\ 
-  Tungaru + Tuvalu & 1.363 & 0.712 & -0.892 & -0.005 & 0.182 & 0.018 \\ 
-  Ureparapara & -0.774 & -0.050 & -1.025 & 0.391 & -1.110 & 0.864 \\ 
-  Aneityum & -0.500 & -0.970 & 0.121 & -1.272 & 0.182 & 0.864 \\ 
-  Anuta & -2.042 & 1.359 & 1.510 & -0.124 & -1.110 & 0.864 \\ 
-  Aore & -0.578 & -0.274 & -0.385 & -0.788 & -1.110 & 0.864 \\ 
-  Aotearoa & 3.025 & -2.534 & 2.597 & 2.543 & 0.182 & -1.393 \\ 
-  Avaiki Nui (south) & 0.210 & -0.708 & 0.082 & 0.110 & 0.182 & -1.111 \\ 
-  Chuuk & 0.800 & 0.830 & -1.223 & 1.476 & 0.182 & 0.300 \\ 
-  East Futuna & -0.408 & 0.272 & -0.307 & 0.596 & 0.182 & 0.300 \\ 
-  Hawaii & 1.331 & -0.745 & 0.376 & 0.746 & 2.766 & -1.111 \\ 
-  Hiu & -0.709 & 0.045 & -1.033 & 0.587 & -1.110 & 0.864 \\ 
-  Kadavu & 0.324 & -0.740 & -0.163 & -0.472 & 1.474 & 0.864 \\ 
-  Kapingamarangi & -1.305 & 1.534 & 1.013 & -0.954 & -1.110 & -1.111 \\ 
-  Kosrae & -0.269 & 1.039 & -1.208 & 1.261 & 1.474 & 0.018 \\ 
-  Lau & 1.435 & -0.634 & -0.524 & -0.057 & 1.474 & 0.864 \\ 
-  Lifou & -0.010 & -1.095 & 0.145 & -1.496 & 0.182 & 0.864 \\ 
-  Loh-Toga & -0.070 & 0.190 & -0.619 & 0.321 & -1.110 & 0.864 \\ 
-  Luangiua & -0.797 & 1.762 & 1.102 & -0.132 & -1.110 & -1.675 \\ 
-  Mangareva & 0.123 & -0.675 & 0.782 & 1.372 & 0.182 & -1.111 \\ 
-  Mo-ava-mo-iki & -0.106 & 0.237 & -1.096 & 0.875 & 0.182 & 0.864 \\ 
-  Mota & -1.077 & -0.045 & -1.003 & 0.450 & -1.110 & 0.864 \\ 
-  Mota Lava & -0.694 & 0.167 & -0.443 & 0.074 & -1.110 & 0.864 \\ 
-  Māngarongaro & -0.785 & 1.350 & 1.138 & -0.988 & 0.182 & -1.675 \\ 
-  Nengone & -0.165 & -1.172 & 0.290 & -1.364 & 1.474 & 0.864 \\ 
-  Niue & -0.523 & -0.771 & -0.410 & 0.074 & 0.182 & 0.018 \\ 
-  Nukuoro & -1.283 & 1.731 & 0.870 & -0.718 & -1.110 & -1.675 \\ 
-  Paama & -0.654 & -0.603 & -0.875 & -0.524 & -1.110 & 0.864 \\ 
-  Palau & 0.534 & 0.817 & -1.214 & 1.435 & 0.182 & 0.864 \\ 
-  Pohnpei & 0.509 & 0.932 & -1.177 & 1.413 & 1.474 & -0.264 \\ 
-  Pukapuka & -0.834 & 0.780 & -0.386 & 0.951 & 0.182 & -1.393 \\ 
-  Raivavae & -0.360 & -0.714 & 1.501 & 0.073 & 0.182 & -1.393 \\ 
-  Rakahanga-Manihiki & -0.952 & 1.395 & 1.320 & -0.482 & 0.182 & -1.675 \\ 
-  Rapa Nui & -0.498 & -1.583 & 0.218 & -0.396 & 0.182 & -1.393 \\ 
-  Ratak + Rālik & 1.259 & 0.604 & -1.047 & 0.333 & 1.474 & 0.018 \\ 
-  Rimatara & -1.082 & -0.787 & 0.588 & 0.126 & 0.182 & -1.393 \\ 
-  Rotuma & -0.779 & 0.848 & 0.315 & 0.722 & 1.474 & -0.829 \\ 
-  Rurutu & -0.416 & -0.946 & 0.479 & 0.429 & 0.182 & -1.393 \\ 
-  Rēkohou & 0.707 & -2.574 & 2.634 & 2.166 & 0.182 & -1.675 \\ 
-  Sāmoa & 1.179 & 0.150 & -0.790 & 0.971 & 1.474 & 0.582 \\ 
-  Tahiti & 1.346 & -0.179 & -0.410 & 0.555 & 1.474 & -1.111 \\ 
-  Te Henua ‘Enana & 0.823 & -0.201 & -1.951 & -2.527 & -1.110 & -1.111 \\ 
-  Tikopia & -1.595 & 1.232 & 1.512 & -0.401 & 0.182 & 0.864 \\ 
-  Tokelau & -0.508 & 1.755 & 1.332 & 0.379 & 0.182 & -1.393 \\ 
-  Tonga & 1.477 & -0.871 & -0.331 & -0.074 & 1.474 & 0.582 \\ 
-  Tuamotu & 2.367 & -0.210 & -0.451 & 0.723 & 0.182 & -1.111 \\ 
-  Tupuai & -0.674 & -0.897 & 0.828 & 0.398 & 0.182 & -1.393 \\ 
-  Ulithi (greater) & -0.003 & 0.710 & -0.637 & 0.972 & 0.182 & 0.018 \\ 
-  Uvea (Wallis) & -0.382 & 0.465 & -0.360 & 0.918 & 0.182 & 0.300 \\ 
-  Woleai & -0.828 & 1.691 & 1.176 & -0.123 & 0.182 & -0.264 \\ 
-  Yap & -0.741 & 1.506 & 1.351 & -0.167 & 1.474 & 0.300 \\ 
+Malakula & 33.000 & 1.010 & -0.612 & -0.837 & -0.662 & -1.110 & 0.864 \\ 
+  Kanaky (New Caledonia main island) & 29.000 & 2.275 & -1.420 & -0.254 & -1.210 & -1.110 & 0.864 \\ 
+  Santo & 24.000 & 1.038 & -0.340 & -0.854 & -0.348 & -1.110 & 0.864 \\ 
+  Ambrym & 6.000 & -0.706 & 0.372 & 1.624 & -2.085 & -1.110 & 0.864 \\ 
+  Efate & 5.000 & 0.559 & -0.675 & -0.429 & -1.083 & 0.182 & 0.864 \\ 
+  Pentecost & 5.000 & -0.173 & -0.219 & -0.356 & -0.601 & -1.110 & 0.864 \\ 
+  Tanna & 5.000 & -0.308 & -1.063 & -0.592 & -0.951 & -1.110 & 0.864 \\ 
+  Viti Levu + Yasawa & 4.000 & 1.238 & -0.597 & -0.573 & -0.338 & 1.474 & 0.864 \\ 
+  Erromango & 3.000 & -0.141 & -0.775 & -0.101 & -1.303 & 0.182 & 0.864 \\ 
+  Laguas yan gåni & 3.000 & 0.703 & -0.303 & -1.148 & -1.141 & -1.110 & 1.146 \\ 
+  Maewo & 3.000 & -0.194 & -0.124 & -0.384 & -0.448 & -1.110 & 0.864 \\ 
+  Vanua Lava & 3.000 & -0.272 & 0.160 & -0.440 & 0.067 & -1.110 & 0.864 \\ 
+  Ambae & 2.000 & -0.804 & 0.556 & 1.559 & -1.812 & -1.110 & 0.864 \\ 
+  Duff + Reef Islands & 2.000 & -0.636 & 0.905 & -0.534 & 1.536 & -1.110 & 0.864 \\ 
+  Tungaru + Tuvalu & 2.000 & 1.363 & 0.712 & -0.892 & -0.005 & 0.182 & 0.018 \\ 
+  Ureparapara & 2.000 & -0.774 & -0.050 & -1.025 & 0.391 & -1.110 & 0.864 \\ 
+  Aneityum & 1.000 & -0.500 & -0.970 & 0.121 & -1.272 & 0.182 & 0.864 \\ 
+  Anuta & 1.000 & -2.042 & 1.359 & 1.510 & -0.124 & -1.110 & 0.864 \\ 
+  Aore & 1.000 & -0.578 & -0.274 & -0.385 & -0.788 & -1.110 & 0.864 \\ 
+  Aotearoa & 1.000 & 3.025 & -2.534 & 2.597 & 2.543 & 0.182 & -1.393 \\ 
+  Avaiki Nui (south) & 1.000 & 0.210 & -0.708 & 0.082 & 0.110 & 0.182 & -1.111 \\ 
+  Chuuk & 1.000 & 0.800 & 0.830 & -1.223 & 1.476 & 0.182 & 0.300 \\ 
+  East Futuna & 1.000 & -0.408 & 0.272 & -0.307 & 0.596 & 0.182 & 0.300 \\ 
+  Hawaii & 1.000 & 1.331 & -0.745 & 0.376 & 0.746 & 2.766 & -1.111 \\ 
+  Hiu & 1.000 & -0.709 & 0.045 & -1.033 & 0.587 & -1.110 & 0.864 \\ 
+  Kadavu & 1.000 & 0.324 & -0.740 & -0.163 & -0.472 & 1.474 & 0.864 \\ 
+  Kapingamarangi & 1.000 & -1.305 & 1.534 & 1.013 & -0.954 & -1.110 & -1.111 \\ 
+  Kosrae & 1.000 & -0.269 & 1.039 & -1.208 & 1.261 & 1.474 & 0.018 \\ 
+  Lau & 1.000 & 1.435 & -0.634 & -0.524 & -0.057 & 1.474 & 0.864 \\ 
+  Lifou & 1.000 & -0.010 & -1.095 & 0.145 & -1.496 & 0.182 & 0.864 \\ 
+  Loh-Toga & 1.000 & -0.070 & 0.190 & -0.619 & 0.321 & -1.110 & 0.864 \\ 
+  Luangiua & 1.000 & -0.797 & 1.762 & 1.102 & -0.132 & -1.110 & -1.675 \\ 
+  Mangareva & 1.000 & 0.123 & -0.675 & 0.782 & 1.372 & 0.182 & -1.111 \\ 
+  Mo-ava-mo-iki & 1.000 & -0.106 & 0.237 & -1.096 & 0.875 & 0.182 & 0.864 \\ 
+  Mota & 1.000 & -1.077 & -0.045 & -1.003 & 0.450 & -1.110 & 0.864 \\ 
+  Mota Lava & 1.000 & -0.694 & 0.167 & -0.443 & 0.074 & -1.110 & 0.864 \\ 
+  Māngarongaro & 1.000 & -0.785 & 1.350 & 1.138 & -0.988 & 0.182 & -1.675 \\ 
+  Nengone & 1.000 & -0.165 & -1.172 & 0.290 & -1.364 & 1.474 & 0.864 \\ 
+  Niue & 1.000 & -0.523 & -0.771 & -0.410 & 0.074 & 0.182 & 0.018 \\ 
+  Nukuoro & 1.000 & -1.283 & 1.731 & 0.870 & -0.718 & -1.110 & -1.675 \\ 
+  Paama & 1.000 & -0.654 & -0.603 & -0.875 & -0.524 & -1.110 & 0.864 \\ 
+  Palau & 1.000 & 0.534 & 0.817 & -1.214 & 1.435 & 0.182 & 0.864 \\ 
+  Pohnpei & 1.000 & 0.509 & 0.932 & -1.177 & 1.413 & 1.474 & -0.264 \\ 
+  Pukapuka & 1.000 & -0.834 & 0.780 & -0.386 & 0.951 & 0.182 & -1.393 \\ 
+  Raivavae & 1.000 & -0.360 & -0.714 & 1.501 & 0.073 & 0.182 & -1.393 \\ 
+  Rakahanga-Manihiki & 1.000 & -0.952 & 1.395 & 1.320 & -0.482 & 0.182 & -1.675 \\ 
+  Rapa Nui & 1.000 & -0.498 & -1.583 & 0.218 & -0.396 & 0.182 & -1.393 \\ 
+  Ratak + Rālik & 1.000 & 1.259 & 0.604 & -1.047 & 0.333 & 1.474 & 0.018 \\ 
+  Rimatara & 1.000 & -1.082 & -0.787 & 0.588 & 0.126 & 0.182 & -1.393 \\ 
+  Rotuma & 1.000 & -0.779 & 0.848 & 0.315 & 0.722 & 1.474 & -0.829 \\ 
+  Rurutu & 1.000 & -0.416 & -0.946 & 0.479 & 0.429 & 0.182 & -1.393 \\ 
+  Rēkohou & 1.000 & 0.707 & -2.574 & 2.634 & 2.166 & 0.182 & -1.675 \\ 
+  Sāmoa & 1.000 & 1.179 & 0.150 & -0.790 & 0.971 & 1.474 & 0.582 \\ 
+  Tahiti & 1.000 & 1.346 & -0.179 & -0.410 & 0.555 & 1.474 & -1.111 \\ 
+  Te Henua ‘Enana & 1.000 & 0.823 & -0.201 & -1.951 & -2.527 & -1.110 & -1.111 \\ 
+  Tikopia & 1.000 & -1.595 & 1.232 & 1.512 & -0.401 & 0.182 & 0.864 \\ 
+  Tokelau & 1.000 & -0.508 & 1.755 & 1.332 & 0.379 & 0.182 & -1.393 \\ 
+  Tonga & 1.000 & 1.477 & -0.871 & -0.331 & -0.074 & 1.474 & 0.582 \\ 
+  Tuamotu & 1.000 & 2.367 & -0.210 & -0.451 & 0.723 & 0.182 & -1.111 \\ 
+  Tupuai & 1.000 & -0.674 & -0.897 & 0.828 & 0.398 & 0.182 & -1.393 \\ 
+  Ulithi (greater) & 1.000 & -0.003 & 0.710 & -0.637 & 0.972 & 0.182 & 0.018 \\ 
+  Uvea (Wallis) & 1.000 & -0.382 & 0.465 & -0.360 & 0.918 & 0.182 & 0.300 \\ 
+  Woleai & 1.000 & -0.828 & 1.691 & 1.176 & -0.123 & 0.182 & -0.264 \\ 
+  Yap & 1.000 & -0.741 & 1.506 & 1.351 & -0.167 & 1.474 & 0.300 \\ 
    \bottomrule
 \caption{Table of input values to model, shared language island groups.} 
 \label{appendix_medium_table}
