--- a/latex/appendix_SBZR_group_table.tex
+++ b/latex/appendix_SBZR_group_table.tex
@@ -1,65 +1,65 @@
 % latex table generated in R 4.3.1 by xtable 1.8-4 package
-% Thu Aug 24 21:04:01 2023
-\begin{longtable}{p{4.5cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}}
+% Thu Aug 24 21:33:07 2023
+\begin{longtable}{p{4.5cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}p{1.7cm}}
   \toprule
-Island group (overnight-sailing) & Shoreline & environ PC1 & environ PC2 & Political complexity (EA033) & Time depth \\ 
+Island group (overnight-sailing) & lg_count & Shoreline & environ PC1 & environ PC2 & Political complexity (EA033) & Time depth \\ 
   \midrule
-Vanuatu + Temotu & 1.293 & -0.338 & 0.998 & -1.860 & 1.753 \\ 
-  New Caledonia (incl loyalties) & 2.129 & -1.347 & 1.067 & 1.447 & 1.753 \\ 
-  Fiji & 1.756 & -0.644 & 0.924 & 1.447 & 1.753 \\ 
-  Chuuk & 0.783 & 0.649 & 0.706 & -0.207 & 1.083 \\ 
-  Laguas yan gåni & 0.634 & -0.368 & 1.860 & -1.860 & 2.088 \\ 
-  Pohnpei & 0.451 & 0.648 & 0.777 & 1.447 & 0.413 \\ 
-  Luangiua + Nukumanu & -0.671 & 1.412 & -0.681 & -1.860 & -1.262 \\ 
-  Niu + Tuvalu & -0.214 & 1.516 & -1.107 & -0.207 & 0.748 \\ 
-  Te Henua ‘Enana + Te Fenua ’Enata & 0.869 & -0.223 & 2.947 & -1.860 & -0.592 \\ 
-  Ulithi + Yap & -0.004 & 0.438 & 0.537 & -0.207 & 1.083 \\ 
-  Woleai & -0.802 & 1.379 & -0.733 & -0.207 & 0.413 \\ 
-  Aotearoa & 2.840 & -2.489 & -2.494 & -0.207 & -0.927 \\ 
-  Banaba & -1.522 & 1.032 & -0.236 & -0.207 & 0.748 \\ 
-  Bellona + Rennelle & -0.134 & 0.015 & 0.980 & -0.207 & 1.753 \\ 
-  East Futuna & -0.421 & 0.067 & 0.384 & -0.207 & 1.083 \\ 
-  Hawaii & 1.231 & -0.827 & -0.175 & 3.100 & -0.592 \\ 
-  Hereheretue & -0.518 & -0.485 & -0.192 & -0.207 & -0.592 \\ 
-  Kapingamarangi & -1.273 & 1.267 & -0.318 & -1.860 & -0.592 \\ 
-  Kosrae & -0.289 & 0.713 & 0.927 & 1.447 & 0.748 \\ 
-  Mangaia & -0.807 & -1.086 & 0.253 & -0.207 & -0.592 \\ 
-  Mangareva & 0.084 & -0.805 & -0.817 & -0.207 & -0.592 \\ 
-  Marutea & 0.076 & -0.508 & -0.888 & -0.207 & -0.592 \\ 
-  Morane & -1.294 & -0.069 & -2.198 & -0.207 & -0.592 \\ 
-  Māngarongaro & -0.779 & 1.112 & -0.345 & -0.207 & -1.262 \\ 
-  Napuka & -0.402 & -0.055 & 0.668 & -0.207 & -0.592 \\ 
-  Ngatik & -1.469 & 1.505 & -0.552 & 1.447 & 0.413 \\ 
-  Ngā Pū Toru & 0.089 & -0.607 & 0.371 & -0.207 & -0.592 \\ 
-  Niue & -0.530 & -0.842 & 0.727 & -0.207 & 0.748 \\ 
-  Nukuoro & -1.252 & 1.431 & -0.244 & -1.860 & -1.262 \\ 
-  Nukutaveke 59 & 0.315 & -0.609 & -0.690 & -0.207 & -0.592 \\ 
-  Nukutaveke 61 & 0.315 & -0.609 & -0.690 & -0.207 & -0.592 \\ 
-  Palau & 0.474 & 0.512 & 0.877 & -0.207 & 1.753 \\ 
-  Pukapuka & -0.826 & 0.509 & 0.323 & -0.207 & -0.927 \\ 
-  Raivavae & -0.376 & -0.781 & -0.978 & -0.207 & -0.927 \\ 
-  Rakahanga-Manihiki & -0.938 & 1.132 & -0.707 & -0.207 & -1.262 \\ 
-  Rapa Nui & -0.506 & -1.529 & 0.529 & -0.207 & -0.927 \\ 
-  Raro Matai + Nia Matai & 1.246 & -0.330 & 0.530 & 1.447 & -0.592 \\ 
-  Rarotonga & -0.436 & -0.925 & 0.147 & -0.207 & -0.592 \\ 
-  Ratak + Rālik & 1.162 & 0.364 & 1.177 & 1.447 & 0.748 \\ 
-  Rimatara & -1.061 & -0.853 & -0.180 & -0.207 & -0.927 \\ 
-  Rotuma & -0.774 & 0.579 & -0.252 & 1.447 & -0.257 \\ 
-  Rurutu & -0.429 & -1.010 & -0.186 & -0.207 & -0.927 \\ 
-  Rēkohou & 0.638 & -2.494 & -2.313 & -0.207 & -1.262 \\ 
-  Sorol & -1.436 & 1.325 & -0.844 & -0.207 & 0.748 \\ 
-  Sāmoa & 1.086 & -0.059 & 0.694 & 1.447 & 1.418 \\ 
-  Tatakoto + Reao & 0.259 & -0.387 & 0.320 & -0.207 & -0.592 \\ 
-  Tokelau & -0.516 & 1.410 & -1.064 & -0.207 & -0.927 \\ 
-  Tonga & 1.370 & -0.927 & 0.708 & 1.447 & 1.418 \\ 
-  Tuamotu + Puka-puka & 2.211 & -0.340 & 0.720 & -0.207 & -0.592 \\ 
-  Tungaru & 1.251 & 0.209 & 1.530 & -0.207 & 0.748 \\ 
-  Tupuai & -0.673 & -0.962 & -0.487 & -0.207 & -0.927 \\ 
-  Tureia & -0.488 & -0.654 & -0.651 & -0.207 & -0.592 \\ 
-  Tuvalu 31 & -0.221 & 1.501 & -1.126 & -0.207 & -0.592 \\ 
-  Tuvalu 32 & -0.221 & 1.501 & -1.126 & -0.207 & -0.592 \\ 
-  Uvea (Wallis) & -0.397 & 0.226 & 0.305 & -0.207 & 1.083 \\ 
-  Ānewetak & -0.882 & 0.711 & 0.288 & 1.447 & 0.748 \\ 
+Vanuatu + Temotu & 130.000 & 1.293 & -0.338 & 0.998 & -1.860 & 1.753 \\ 
+  New Caledonia (incl loyalties) & 34.000 & 2.129 & -1.347 & 1.067 & 1.447 & 1.753 \\ 
+  Fiji & 8.000 & 1.756 & -0.644 & 0.924 & 1.447 & 1.753 \\ 
+  Chuuk & 6.000 & 0.783 & 0.649 & 0.706 & -0.207 & 1.083 \\ 
+  Laguas yan gåni & 3.000 & 0.634 & -0.368 & 1.860 & -1.860 & 2.088 \\ 
+  Pohnpei & 3.000 & 0.451 & 0.648 & 0.777 & 1.447 & 0.413 \\ 
+  Luangiua + Nukumanu & 2.000 & -0.671 & 1.412 & -0.681 & -1.860 & -1.262 \\ 
+  Niu + Tuvalu & 2.000 & -0.214 & 1.516 & -1.107 & -0.207 & 0.748 \\ 
+  Te Henua ‘Enana + Te Fenua ’Enata & 2.000 & 0.869 & -0.223 & 2.947 & -1.860 & -0.592 \\ 
+  Ulithi + Yap & 2.000 & -0.004 & 0.438 & 0.537 & -0.207 & 1.083 \\ 
+  Woleai & 2.000 & -0.802 & 1.379 & -0.733 & -0.207 & 0.413 \\ 
+  Aotearoa & 1.000 & 2.840 & -2.489 & -2.494 & -0.207 & -0.927 \\ 
+  Banaba & 1.000 & -1.522 & 1.032 & -0.236 & -0.207 & 0.748 \\ 
+  Bellona + Rennelle & 1.000 & -0.134 & 0.015 & 0.980 & -0.207 & 1.753 \\ 
+  East Futuna & 1.000 & -0.421 & 0.067 & 0.384 & -0.207 & 1.083 \\ 
+  Hawaii & 1.000 & 1.231 & -0.827 & -0.175 & 3.100 & -0.592 \\ 
+  Hereheretue & 1.000 & -0.518 & -0.485 & -0.192 & -0.207 & -0.592 \\ 
+  Kapingamarangi & 1.000 & -1.273 & 1.267 & -0.318 & -1.860 & -0.592 \\ 
+  Kosrae & 1.000 & -0.289 & 0.713 & 0.927 & 1.447 & 0.748 \\ 
+  Mangaia & 1.000 & -0.807 & -1.086 & 0.253 & -0.207 & -0.592 \\ 
+  Mangareva & 1.000 & 0.084 & -0.805 & -0.817 & -0.207 & -0.592 \\ 
+  Marutea & 1.000 & 0.076 & -0.508 & -0.888 & -0.207 & -0.592 \\ 
+  Morane & 1.000 & -1.294 & -0.069 & -2.198 & -0.207 & -0.592 \\ 
+  Māngarongaro & 1.000 & -0.779 & 1.112 & -0.345 & -0.207 & -1.262 \\ 
+  Napuka & 1.000 & -0.402 & -0.055 & 0.668 & -0.207 & -0.592 \\ 
+  Ngatik & 1.000 & -1.469 & 1.505 & -0.552 & 1.447 & 0.413 \\ 
+  Ngā Pū Toru & 1.000 & 0.089 & -0.607 & 0.371 & -0.207 & -0.592 \\ 
+  Niue & 1.000 & -0.530 & -0.842 & 0.727 & -0.207 & 0.748 \\ 
+  Nukuoro & 1.000 & -1.252 & 1.431 & -0.244 & -1.860 & -1.262 \\ 
+  Nukutaveke 59 & 1.000 & 0.315 & -0.609 & -0.690 & -0.207 & -0.592 \\ 
+  Nukutaveke 61 & 1.000 & 0.315 & -0.609 & -0.690 & -0.207 & -0.592 \\ 
+  Palau & 1.000 & 0.474 & 0.512 & 0.877 & -0.207 & 1.753 \\ 
+  Pukapuka & 1.000 & -0.826 & 0.509 & 0.323 & -0.207 & -0.927 \\ 
+  Raivavae & 1.000 & -0.376 & -0.781 & -0.978 & -0.207 & -0.927 \\ 
+  Rakahanga-Manihiki & 1.000 & -0.938 & 1.132 & -0.707 & -0.207 & -1.262 \\ 
+  Rapa Nui & 1.000 & -0.506 & -1.529 & 0.529 & -0.207 & -0.927 \\ 
+  Raro Matai + Nia Matai & 1.000 & 1.246 & -0.330 & 0.530 & 1.447 & -0.592 \\ 
+  Rarotonga & 1.000 & -0.436 & -0.925 & 0.147 & -0.207 & -0.592 \\ 
+  Ratak + Rālik & 1.000 & 1.162 & 0.364 & 1.177 & 1.447 & 0.748 \\ 
+  Rimatara & 1.000 & -1.061 & -0.853 & -0.180 & -0.207 & -0.927 \\ 
+  Rotuma & 1.000 & -0.774 & 0.579 & -0.252 & 1.447 & -0.257 \\ 
+  Rurutu & 1.000 & -0.429 & -1.010 & -0.186 & -0.207 & -0.927 \\ 
+  Rēkohou & 1.000 & 0.638 & -2.494 & -2.313 & -0.207 & -1.262 \\ 
+  Sorol & 1.000 & -1.436 & 1.325 & -0.844 & -0.207 & 0.748 \\ 
+  Sāmoa & 1.000 & 1.086 & -0.059 & 0.694 & 1.447 & 1.418 \\ 
+  Tatakoto + Reao & 1.000 & 0.259 & -0.387 & 0.320 & -0.207 & -0.592 \\ 
+  Tokelau & 1.000 & -0.516 & 1.410 & -1.064 & -0.207 & -0.927 \\ 
+  Tonga & 1.000 & 1.370 & -0.927 & 0.708 & 1.447 & 1.418 \\ 
+  Tuamotu + Puka-puka & 1.000 & 2.211 & -0.340 & 0.720 & -0.207 & -0.592 \\ 
+  Tungaru & 1.000 & 1.251 & 0.209 & 1.530 & -0.207 & 0.748 \\ 
+  Tupuai & 1.000 & -0.673 & -0.962 & -0.487 & -0.207 & -0.927 \\ 
+  Tureia & 1.000 & -0.488 & -0.654 & -0.651 & -0.207 & -0.592 \\ 
+  Tuvalu 31 & 1.000 & -0.221 & 1.501 & -1.126 & -0.207 & -0.592 \\ 
+  Tuvalu 32 & 1.000 & -0.221 & 1.501 & -1.126 & -0.207 & -0.592 \\ 
+  Uvea (Wallis) & 1.000 & -0.397 & 0.226 & 0.305 & -0.207 & 1.083 \\ 
+  Ānewetak & 1.000 & -0.882 & 0.711 & 0.288 & 1.447 & 0.748 \\ 
    \bottomrule
 \caption{Table of input values to model, overnight-sailing island groups.} 
 \label{appendix_SBZR_table}
