Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -889,17 +889,22 @@ There is a negative correlation of -0.56 between the population (log10) per coun
 \newpage
 \subsection{Table of settlement date per island group based on archaeology}
 \singlespacing
-\label{dates_table_appendic}
-%\begin{landscape}
+\label{dates_table_appendix}
+
+Table \ref{appendix_dates_xtable} shows data on settlement dates from several different archaeological studies. 
+
+The column ``Source'' contains the relevant reference, and ``Source (meta)'' the citation for the source that is citing the reference in ``Source'', where that is useful. In cases where it was reasonable to infer a settlement date based on a nearby island, this is indicated in the column ``Based on inference from neighbouring island?''.
+
+In the summary table in \citet{rieth_cochrane_2018},  the Vanuatu islands Santa Cruz and Reef islands are mentioned specifically on a separate row to ``Vanuatu''. Therefore, we take ``Vanuatu'' to mean islands in Vanutu excluding Santa Cruz and Reef islands 
+
+In the case of the so-called ``Polynesian Outliers'', i.e. communities who speak languages that belong to the Polynesian linguistic group but are living in islands outside of the traditional ``Polynesian triangle'', where possible we used the settlement dates of the first human settlelment even if this is different from the Polynesian outlier socities living there today. For example, \citet{carson2012recent} describes non-Polynesian horizons in Mo-ava-mo-iki (a.k.a Renelle and Bellona). For Taumako, Carson describes the initial Lapita settlement as 3,000 years ago and the Polynesian outlier settlement 1000 years ago.
+
+The column ``Time depth settlement group'' contains the grouping of islands into settlement waves, which is what is used in the models. For each of the island groups, the oldest settlement group was used.
+
+\begin{landscape}
 \input{appendix_dates_xtable.tex}
-%\end{landscape}
+\end{landscape}
 
-In the table of \citet{rieth_cochrane_2018},  Santa Cruz and Reef islands are mentioned specifically, so we take “Vanuatu” to mean all islands in Vanuatu minus those.
-Re outliers
-
-Renelle belleona dates are Older date for pre-polynesian settlement horizon \citet{carson2012recent}. For Taumako, Carson describes initial Lapita settlement 3,000 years ago and Polynesian outlier settlmenent 1000 years ago.
-
-For Nukuoro, Carson notes that there is evidence of earlier, possibly short-term, settlement.
 
 \FloatBarrier
 \newpage
